Change recommended hike style for killarney.html glenveagh.html and ballycroy.html

--- a/ballycroy.html
+++ b/ballycroy.html
@@ -32,21 +32,52 @@
             <p>Ballycroy National Park (or Wild Nephin National Park) is Ireland’s sixth National Park and located on the Western seaboard in northwest Mayo. It comprises of 15,000 hectares of Atlantic blanket bog and mountainous terrain, covering a vast uninhabited and unspoilt wilderness dominated by the Nephin Beg mountain range. To the west of the mountains is the Owenduff bog. This is one of the last intact active blanket bog systems in Ireland and Western Europe and is an important scientific and scenic feature of the National Park. Wild Nephin National Park is part of the Natura 2000 Network, which protects rare and important habitats and species under the EU Habitats and Birds Directive. To the east of the mountains is the Nephin Forest, which is currently mainly comprised of Sitka spruce and lodgepole pine, and was originally planted for commercial purposes. This area is now within the National Park and will be managed for biodiversity and recreation.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2343.778077126569!2d-9.825516484348645!3d54.024461631401934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4859731760fb30ed%3A0xa19189cc64843b8f!2sBallycroy%20Visitor%20Centre%20-%20Wild%20Nephin%20National%20Park!5e0!3m2!1sen!2sie!4v1667434343004!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         
-        <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Bangor Trail</h2>
-            <ol>
-                <li><strong>Start:</strong> Bangor Erris</li>
-                <li><strong>End:</strong> Letterkeen Loop Trail Head</li>
-                <li><strong>Difficulty level:</strong> Difficult</li>
-                <li><strong>Length:</strong> 29.9km (7:04 hours)</li>
-                <li><strong>Ascent:</strong> 773m</li>
-                <li><strong>Rating:</strong> 8.1/10</li>
-            </ol>
+        <h2 class="parks-heading">Recommended hikes</h2>
+        <div class="recommended">
+            <div class="hike">
+                <h3>Bellmullet and Ballina Road</h3>
+                <ul>
+                    <li><strong>Start:</strong> Bellmullet</li>
+                    <li><strong>End:</strong> Bellmullet</li>
+                    <li><strong>Difficulty level:</strong> Easy</li>
+                    <li><strong>Length:</strong> 3.4km (49min)</li>
+                    <li><strong>Ascent:</strong> 66m</li>
+                    <li><strong>Rating:</strong> 8.4/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/bellmulet-and-ballina-road-circular" target="_blank" id="hike-link">Hike Details</a>
+                    </div>
+            </div>
+            <div class="hike">
+                <h3>Lough Aroher Loop</h3>
+                <ul>
+                    <li><strong>Start:</strong> Nephin Drive car park</li>
+                    <li><strong>End:</strong> Nephin Drive car park</li>
+                    <li><strong>Difficulty level:</strong> Moderate</li>
+                    <li><strong>Length:</strong> 9.3km (2:40 hours)</li>
+                    <li><strong>Ascent:</strong> 290m</li>
+                    <li><strong>Rating:</strong> 8.6/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/lough-aroher-loop" target="_blank" id="hike-link">Hike Details</a>
+                </div>
+            </div>
+            <div class="hike">
+                <h3>Bangor Trail</h3>
+                <ul>
+                    <li><strong>Start:</strong> Bangor Erris</li>
+                    <li><strong>End:</strong> Letterkeen Loop Trail Head</li>
+                    <li><strong>Difficulty level:</strong> Difficult</li>
+                    <li><strong>Length:</strong> 29.9km (7:04 hours)</li>
+                    <li><strong>Ascent:</strong> 773m</li>
+                    <li><strong>Rating:</strong> 8.1/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/the-bangor-trail" target="_blank" id="hike-link">Hike Details</a>
+                </div>
+            </div>
         </div>
         
-        <div class="hike-link-div">
-        <a href="https://visitwicklow.ie/listing/glendalough-miners-road-walk-purple-route/" target="_blank" id="hike-link">Hike Details</a>
-        </div>
 
         <h2 class="parks-heading">Best things to see</h2>
         <div class="div-parks-images">
