--- a/glenveah.html
+++ b/glenveah.html
@@ -33,22 +33,50 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2285.1795246656407!2d-7.939875584310081!3d55.0575907528609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485f9baad6bd66ab%3A0x2f5ffa4705e86fad!2sGlenveagh%20National%20Park!5e0!3m2!1sen!2ses!4v1667344794294!5m2!1sen!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         </div>
 
-        <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Glenveagh Lakeside Walk</h2>
-            <ol>
-                <li>Begin at the bus stop near the Visitor Center</li>
-                <li>Walk through the Austrian Pines</li>
-                <li>Reach a wooden boathouse</li>
-                <li>Cross a recently built bridge</li>
-                <li>Reach an open landscape with bogs</li>
-                <li>Cross the open landscape until you reach the Glenveagh Castle gardens</li>
-                <li>Your hike is done!</li>
-            </ol>
-            <img class="hike-map" src="assets/images/glenveagh/glenveagh-hike.png" alt="Map of Glenveagh Lakeside walk">
-        </div>
-        
-        <div class="hike-link-div">
-        <a href="https://www.glenveaghnationalpark.ie/lakeside-walk//" target="_blank" id="hike-link">Hike Details</a>
+        <h2 class="parks-heading">Recommended hikes</h2>
+        <div class="recommended">
+            <div class="hike">
+                <h3>Glenveagh Castle</h3>
+                <ul>
+                    <li><strong>Start:</strong> Glenveagh Castle</li>
+                    <li><strong>End:</strong> Glenveagh Castle</li>
+                    <li><strong>Difficulty level:</strong> Easy</li>
+                    <li><strong>Length:</strong> 1.9km (41 min)</li>
+                    <li><strong>Ascent:</strong> 99m</li>
+                    <li><strong>Rating:</strong> 10/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/glenveagh-castle" target="_blank" id="hike-link">Hike Details</a>
+                    </div>
+            </div>
+            <div class="hike">
+                <h3>Lough Veagh - Glenveagh Castle</h3>
+                <ul>
+                    <li><strong>Start:</strong> Glenveagh Visitor Center</li>
+                    <li><strong>End:</strong> Glenveagh Castle</li>
+                    <li><strong>Difficulty level:</strong> Moderate</li>
+                    <li><strong>Length:</strong> 10km (2:16 hours)</li>
+                    <li><strong>Ascent:</strong> 146m</li>
+                    <li><strong>Rating:</strong> 9.0/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/lough-veagh-trail-to-glenveagh-castle" target="_blank" id="hike-link">Hike Details</a>
+                </div>
+            </div>
+            <div class="hike">
+                <h3>Letterkenny and Ailt an Chorráin Circular</h3>
+                <ul>
+                    <li><strong>Start:</strong> Letterkenny</li>
+                    <li><strong>End:</strong> Letterkenny</li>
+                    <li><strong>Difficulty level:</strong> Difficult</li>
+                    <li><strong>Length:</strong> 128.9km (32:00 hours)</li>
+                    <li><strong>Ascent:</strong> 2,672m</li>
+                    <li><strong>Rating:</strong> 9.8/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/letterkenny-and-ailt-an-chorrain-circular" target="_blank" id="hike-link">Hike Details</a>
+                </div>
+            </div>
         </div>
 
         <h2 class="parks-heading">Best things to see</h2>
