--- a/killarney.html
+++ b/killarney.html
@@ -33,25 +33,50 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2456.0567014805224!2d-9.5561803!3d52.0058447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48453e3ee43de413%3A0x9d8826b96949907a!2sKillarney%20National%20Park!5e0!3m2!1sen!2sie!4v1666913611513!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Old Kenmare Road</h2>
-            <ol>
-                <li>Begin at the upper car park of Torc Mountain</li>
-                <li>Follow the trail and head towards the shoulder of Torc Mountain</li>
-                <li>Take an immediate left after crossing a wooden bridge</li>
-                <li>Follow the path as you exit the woodlands</li>
-                <li>Keep following the path through a boarwalked path for a few kilometres</li>
-                <li>As you reach the Cores Cascade head back into the woodlands</li>
-                <li>Folow the path until you reach the paved road</li>
-                <li>Take a left turn</li>
-                <li>Follow the path until you see a parking lot</li>
-                <li>Your hike has finished!</li>
-            </ol>
-            <img class="hike-map" src="assets/images/killarney-images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
-        </div>
-        
-        <div class="hike-link-div">
-        <a href="https://killarneyguide.ie/old-kenmare-road/" target="_blank" id="hike-link">Hike Details</a>
+        <h2 class="parks-heading">Recommended hikes</h2>
+        <div class="recommended">
+            <div class="hike">
+                <h3>Ross' Castle Loop</h3>
+                <ul>
+                    <li><strong>Start:</strong> Ross' Castle</li>
+                    <li><strong>End:</strong> Ross' Castle</li>
+                    <li><strong>Difficulty level:</strong> Easy</li>
+                    <li><strong>Length:</strong> 5.6km (1:16 min)</li>
+                    <li><strong>Ascent:</strong> 83m</li>
+                    <li><strong>Rating:</strong> 9/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/ross-castle-circular" target="_blank" id="hike-link">Hike Details</a>
+                    </div>
+            </div>
+            <div class="hike">
+                <h3>Gap of Dunloe - Strickeen</h3>
+                <ul>
+                    <li><strong>Start:</strong> Killarney Shuttle bus stop</li>
+                    <li><strong>End:</strong> Strickeen Mountain</li>
+                    <li><strong>Difficulty level:</strong> Moderate</li>
+                    <li><strong>Length:</strong> 7.1km (2:33 hours)</li>
+                    <li><strong>Ascent:</strong> 376m</li>
+                    <li><strong>Rating:</strong> 9.2/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/gap-of-dunloe-strickeen" target="_blank" id="hike-link">Hike Details</a>
+                </div>
+            </div>
+            <div class="hike">
+                <h3>Dunloe to Lord Brandon's Cottage</h3>
+                <ul>
+                    <li><strong>Start:</strong> Killarney Shuttle bus stop</li>
+                    <li><strong>End:</strong> Lord Brandon's Cottage</li>
+                    <li><strong>Difficulty level:</strong> Difficult</li>
+                    <li><strong>Length:</strong> 22.7km (6:18 hours)</li>
+                    <li><strong>Ascent:</strong> 663m</li>
+                    <li><strong>Rating:</strong> 9.6/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/dunloe-to-lord-brandon-s-cottage" target="_blank" id="hike-link">Hike Details</a>
+                </div>
+            </div>
         </div>
 
         <h2 class="parks-heading">Best things to see</h2>
