Change recommended hikes on connemara.html, burren.html and wicklow.html

--- a/burren.html
+++ b/burren.html
@@ -33,21 +33,50 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2401.308817163479!2d-9.039549284240193!3d52.99683140853402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b751955555555%3A0x36ab0a8cb452f2a8!2sBurren%20National%20Park!5e0!3m2!1sen!2sie!4v1667385249412!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         </div>
 
-        <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Carron Loop Walk</h2>
-            <ol>
-                <li><strong>Start:</strong> Cassidys Pub</li>
-                <li><strong>End:</strong> Cassidys Pub</li>
-                <li><strong>Difficulty level:</strong> Strenous</li>
-                <li><strong>Length:</strong> 9km (4 hours)</li>
-                <li><strong>Ascent:</strong> 100m</li>
-                <li><strong>Rating:</strong> 8.5/10</li>
-            </ol>
-            <img class="hike-map" src="assets/images/burren/carran-loop-map.png" alt="Map of Tully Mountain Hike">
-        </div>
-        
-        <div class="hike-link-div">
-        <a href="https://www.theirishroadtrip.com/burren-walks-guide/" target="_blank" id="hike-link">Hike Details</a>
+        <h2 class="parks-heading">Recommended hikes</h2>
+        <div class="recommended">
+            <div class="hike-left">
+                <h3>Lough Avalla Farm Loop</h3>
+                <ul>
+                    <li><strong>Start:</strong> Green Road Scenic Spot</li>
+                    <li><strong>End:</strong> Green Road Scenic Spot</li>
+                    <li><strong>Difficulty level:</strong> Easy</li>
+                    <li><strong>Length:</strong> 7.1km (1:48 hours)</li>
+                    <li><strong>Ascent:</strong> 162m</li>
+                    <li><strong>Rating:</strong> 9.4/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-clare/lough-avalla-farm-loop--2" target="_blank" id="hike-link">Hike Details</a>
+                    </div>
+            </div>
+            <div class="hike-center">
+                <h3>Mullaghmore and Burren Park</h3>
+                <ul>
+                    <li><strong>Start:</strong> Cooloorta</li>
+                    <li><strong>End:</strong> Cooloorta</li>
+                    <li><strong>Difficulty level:</strong> Moderate</li>
+                    <li><strong>Length:</strong> 6.9km (2:07 hours)</li>
+                    <li><strong>Ascent:</strong> 256m</li>
+                    <li><strong>Rating:</strong> 8.4/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-clare/mullaghmore-and-burren-park-circular" target="_blank" id="hike-link">Hike Details</a>
+                </div>
+            </div>
+            <div class="hike-right">
+                <h3>Fanore and Blackhead loop</h3>
+                <ul>
+                    <li><strong>Start:</strong> Fanore Beach</li>
+                    <li><strong>End:</strong> Fanore Beach</li>
+                    <li><strong>Difficulty level:</strong> Difficult</li>
+                    <li><strong>Length:</strong> 24.6km (7:10 hours)</li>
+                    <li><strong>Ascent:</strong> 811m</li>
+                    <li><strong>Rating:</strong> 9.4/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-clare/fanore-and-blackhead-loop" target="_blank" id="hike-link">Hike Details</a>
+                </div>
+            </div>
         </div>
 
         <h2 class="parks-heading">Best things to see</h2>
