--- a/connemara.html
+++ b/connemara.html
@@ -33,24 +33,50 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2371.0858478011814!2d-9.889730584222164!3d53.53838136801077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485a2588a1ca30a5%3A0xf6d1d848f4aa37c9!2sConnemara%20National%20Park!5e0!3m2!1sen!2sie!4v1667382177485!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Tully Mountain Hike</h2>
-            <ol>
-                <li>Begin at the Letterfrack parking lot</li>
-                <li>Walk left for 500 m until you get to the top of the hill</li>
-                <li>Turn right off the road until you see a fence with a gate</li>
-                <li>Hike the mountain shoulder until you reach the top</li>
-                <li>Continue west and climb the next three peaks, keeping two lakes on your right hand side</li>
-                <li>Descend the valley on the west side of tully mountain in the direction of the sea cliffs until you meet a large stone wall near the bottom of the mountain</li>
-                <li>Turn left and follow the wall until you meet the end of the road on the south side of the mountain</li>
-                <li>Continue down the south side of the mountain until you meet the road</li>
-                <li>Follow the road east back to the pier</li>
-            </ol>
-            <img class="hike-map" src="assets/images/connemara/tully-mountain-hike.png" alt="Map of Tully Mountain Hike">
-        </div>
-        
-        <div class="hike-link-div">
-        <a href="https://connemaranationalpark.com/walk-tully-mountain-2/" target="_blank" id="hike-link">Hike Details</a>
+        <h2 class="parks-heading">Recommended hikes</h2>
+        <div class="recommended">
+            <div class="hike-left">
+                <h3>Lower Diamond Hill Loop</h3>
+                <ul>
+                    <li><strong>Start:</strong> Park Visitor Center</li>
+                    <li><strong>End:</strong> Park Visitor Center</li>
+                    <li><strong>Difficulty level:</strong> Easy</li>
+                    <li><strong>Length:</strong> 2.9km (53 min)</li>
+                    <li><strong>Ascent:</strong> 109m</li>
+                    <li><strong>Rating:</strong> 8.8/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-galway/lower-diamond-hill-loop" target="_blank" id="hike-link">Hike Details</a>
+                    </div>
+            </div>
+            <div class="hike-center">
+                <h3>Derryinver - Tully Hill</h3>
+                <ul>
+                    <li><strong>Start:</strong> Derryherbert Harbour</li>
+                    <li><strong>End:</strong> Tully Hill</li>
+                    <li><strong>Difficulty level:</strong> Moderate</li>
+                    <li><strong>Length:</strong> 5km (2:07 hours)</li>
+                    <li><strong>Ascent:</strong> 354m</li>
+                    <li><strong>Rating:</strong> 8.8/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-galway/derryinver-tully-hill" target="_blank" id="hike-link">Hike Details</a>
+                </div>
+            </div>
+            <div class="hike-right">
+                <h3>Letterfrack and Diamond Hill</h3>
+                <ul>
+                    <li><strong>Start:</strong> Letterfrack</li>
+                    <li><strong>End:</strong> Letterfrack</li>
+                    <li><strong>Difficulty level:</strong> Difficult</li>
+                    <li><strong>Length:</strong> 13.8km (5:33 hours)</li>
+                    <li><strong>Ascent:</strong> 890m</li>
+                    <li><strong>Rating:</strong> 9.2/10</li>
+                </ul>
+                <div class="hike-link-div">
+                    <a href="https://www.alltrails.com/trail/ireland/county-galway/letterfrack-and-diamond-hill-loop" target="_blank" id="hike-link">Hike Details</a>
+                </div>
+            </div>
         </div>
 
         <h2 class="parks-heading">Best things to see</h2>
