--- a/glenveah.html
+++ b/glenveah.html
@@ -35,7 +35,7 @@
 
         <h2 class="parks-heading">Recommended hikes</h2>
         <div class="recommended">
-            <div class="hike">
+            <div class="hike-left">
                 <h3>Glenveagh Castle</h3>
                 <ul>
                     <li><strong>Start:</strong> Glenveagh Castle</li>
@@ -49,7 +49,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-donegal/glenveagh-castle" target="_blank" id="hike-link">Hike Details</a>
                     </div>
             </div>
-            <div class="hike">
+            <div class="hike-center">
                 <h3>Lough Veagh - Glenveagh Castle</h3>
                 <ul>
                     <li><strong>Start:</strong> Glenveagh Visitor Center</li>
@@ -63,7 +63,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-donegal/lough-veagh-trail-to-glenveagh-castle" target="_blank" id="hike-link">Hike Details</a>
                 </div>
             </div>
-            <div class="hike">
+            <div class="hike-right">
                 <h3>Letterkenny and Ailt an Chorráin Circular</h3>
                 <ul>
                     <li><strong>Start:</strong> Letterkenny</li>
