--- a/killarney.html
+++ b/killarney.html
@@ -35,7 +35,7 @@
 
         <h2 class="parks-heading">Recommended hikes</h2>
         <div class="recommended">
-            <div class="hike">
+            <div class="hike-left">
                 <h3>Ross' Castle Loop</h3>
                 <ul>
                     <li><strong>Start:</strong> Ross' Castle</li>
@@ -49,7 +49,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-kerry/ross-castle-circular" target="_blank" id="hike-link">Hike Details</a>
                     </div>
             </div>
-            <div class="hike">
+            <div class="hike-center">
                 <h3>Gap of Dunloe - Strickeen</h3>
                 <ul>
                     <li><strong>Start:</strong> Killarney Shuttle bus stop</li>
@@ -63,11 +63,11 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-kerry/gap-of-dunloe-strickeen" target="_blank" id="hike-link">Hike Details</a>
                 </div>
             </div>
-            <div class="hike">
-                <h3>Dunloe to Lord Brandon's Cottage</h3>
+            <div class="hike-right">
+                <h3>Dunloe - Brandon's Cottage</h3>
                 <ul>
                     <li><strong>Start:</strong> Killarney Shuttle bus stop</li>
-                    <li><strong>End:</strong> Lord Brandon's Cottage</li>
+                    <li><strong>End:</strong> Brandon's Cottage</li>
                     <li><strong>Difficulty level:</strong> Difficult</li>
                     <li><strong>Length:</strong> 22.7km (6:18 hours)</li>
                     <li><strong>Ascent:</strong> 663m</li>
