--- a/wicklow.html
+++ b/wicklow.html
@@ -32,23 +32,52 @@
             <p>Wicklow Mountains National Park is situated just south of Dublin. Covering 20,483 hectares, Wicklow Mountains National Park has the distinction of being the largest of Ireland’s six National Parks. It is also the only one located in the east of the country. The National Park extends over much of the Wicklow mountains. Upland blanket bog and heath cover the upland slopes and rounded peaks. The wide open vistas are interrupted only by forestry plantations and narrow winding mountain roads. Fast-flowing streams descend into the deep lakes of the wooded valleys and continue their course into the surrounding lowlands. The primary purpose of Wicklow Mountains National Park is the conservation of biodiversity and landscape. The Park is also an invaluable recreational space for locals and visitors alike. Over one million visits are estimated to be made each year. The most visited area is the scenic Glendalough Valley where the ancient monastic settlement of St. Kevin is located. Escape from the summer crowds is possible for those coming properly equipped to explore the uplands on foot, where a sense of wilderness and isolation can readily be found.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.1711488889973!2d-6.313110184381097!3d53.14302289762259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486797cc185c87f3%3A0x681362f40c30d135!2sWicklow%20Mountains%20National%20Park!5e0!3m2!1sen!2sie!4v1667431810516!5m2!1sen!2sie" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
 
-        <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Miners’ Road Walk</h2>
-            <ol>
-                <li><strong>Start:</strong> Upper Lake car park</li>
-                <li><strong>End:</strong> Miner's Village</li>
-                <li><strong>Difficulty level:</strong> Easy</li>
-                <li><strong>Length:</strong> 5km (1:10 hours)</li>
-                <li><strong>Ascent:</strong> 20m</li>
-                <li><strong>Rating:</strong> 9.5/10</li>
-            </ol>
-            <img class="hike-map" src="assets/images/wicklow/miners-road-hike.png" alt="Map of Miner's Road Hike">
-        </div>
+            <h2 class="parks-heading">Recommended hikes</h2>
+            <div class="recommended">
+                <div class="hike-left">
+                    <h3>Miners' Road Hike</h3>
+                    <ul>
+                        <li><strong>Start:</strong> Glendalough Visitor Center</li>
+                        <li><strong>End:</strong> Old Miners' Village</li>
+                        <li><strong>Difficulty level:</strong> Easy</li>
+                        <li><strong>Length:</strong> 5.8km (1:26 hours)</li>
+                        <li><strong>Ascent:</strong> 119m</li>
+                        <li><strong>Rating:</strong> 9.2/10</li>
+                    </ul>
+                    <div class="hike-link-div">
+                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/miners-road-walk" target="_blank" id="hike-link">Hike Details</a>
+                        </div>
+                </div>
+                <div class="hike-center">
+                    <h3>Spink Loup</h3>
+                    <ul>
+                        <li><strong>Start:</strong> Glendalough Trails Start</li>
+                        <li><strong>End:</strong> Glendalough Trails Start</li>
+                        <li><strong>Difficulty level:</strong> Moderate</li>
+                        <li><strong>Length:</strong> 6.0km (2:14 hours)</li>
+                        <li><strong>Ascent:</strong> 342m</li>
+                        <li><strong>Rating:</strong> 9.2/10</li>
+                    </ul>
+                    <div class="hike-link-div">
+                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/the-spink-loop" target="_blank" id="hike-link">Hike Details</a>
+                    </div>
+                </div>
+                <div class="hike-right">
+                    <h3>1798 Memorial to Lugnaquilla</h3>
+                    <ul>
+                        <li><strong>Start:</strong> Fraughan Rock Waterfall</li>
+                        <li><strong>End:</strong> Lugnaquilla Peak</li>
+                        <li><strong>Difficulty level:</strong> Difficult</li>
+                        <li><strong>Length:</strong> 12.6km (5:01 hours)</li>
+                        <li><strong>Ascent:</strong> 800m</li>
+                        <li><strong>Rating:</strong> 9.0/10</li>
+                    </ul>
+                    <div class="hike-link-div">
+                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/1798-memorial-to-lugnaquilla" target="_blank" id="hike-link">Hike Details</a>
+                    </div>
+                </div>
+            </div>
         
-        <div class="hike-link-div">
-        <a href="https://visitwicklow.ie/listing/glendalough-miners-road-walk-purple-route/" target="_blank" id="hike-link">Hike Details</a>
-        </div>
-
         <h2 class="parks-heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
