--- a/killarney.html
+++ b/killarney.html
@@ -24,7 +24,7 @@
             <a href="burren.html" class="nav-a">Burren National Park</a>
             <a href="wicklow.html" class="nav-a">Wicklow Mountains National Park</a>
             <a href="ballycroy.html" class="nav-a">Ballycroy National Park</a>
-            <a href="#" class="nav-a">Sign up!</a>
+            <a href="signup.html" class="nav-a">Sign up!</a>
         </nav>
 
         <div id="name">
