Style signup.html

--- a/ballycroy.html
+++ b/ballycroy.html
@@ -34,7 +34,7 @@
         
         <h2 class="parks-heading">Recommended hikes</h2>
         <div class="recommended">
-            <div class="hike-left">
+            <div class="hike-rec">
                 <h3>Bellmullet and Ballina Road</h3>
                 <ul>
                     <li><strong>Start:</strong> Bellmullet</li>
@@ -48,7 +48,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-mayo/bellmulet-and-ballina-road-circular" target="_blank" id="hike-link">Hike Details</a>
                     </div>
             </div>
-            <div class="hike-center">
+            <div class="hike-rec">
                 <h3>Lough Aroher Loop</h3>
                 <ul>
                     <li><strong>Start:</strong> Nephin Drive car park</li>
@@ -62,7 +62,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-mayo/lough-aroher-loop" target="_blank" id="hike-link">Hike Details</a>
                 </div>
             </div>
-            <div class="hike-right">
+            <div class="hike-rec">
                 <h3>Bangor Trail</h3>
                 <ul>
                     <li><strong>Start:</strong> Bangor Erris</li>
