--- a/connemara.html
+++ b/connemara.html
@@ -35,7 +35,7 @@
 
         <h2 class="parks-heading">Recommended hikes</h2>
         <div class="recommended">
-            <div class="hike-left">
+            <div class="hike-rec">
                 <h3>Lower Diamond Hill Loop</h3>
                 <ul>
                     <li><strong>Start:</strong> Park Visitor Center</li>
@@ -49,7 +49,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-galway/lower-diamond-hill-loop" target="_blank" id="hike-link">Hike Details</a>
                     </div>
             </div>
-            <div class="hike-center">
+            <div class="hike-rec">
                 <h3>Derryinver - Tully Hill</h3>
                 <ul>
                     <li><strong>Start:</strong> Derryherbert Harbour</li>
@@ -63,7 +63,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-galway/derryinver-tully-hill" target="_blank" id="hike-link">Hike Details</a>
                 </div>
             </div>
-            <div class="hike-right">
+            <div class="hike-rec">
                 <h3>Letterfrack and Diamond Hill</h3>
                 <ul>
                     <li><strong>Start:</strong> Letterfrack</li>
