--- a/killarney.html
+++ b/killarney.html
@@ -35,7 +35,7 @@
 
         <h2 class="parks-heading">Recommended hikes</h2>
         <div class="recommended">
-            <div class="hike-left">
+            <div class="hike-rec">
                 <h3>Ross' Castle Loop</h3>
                 <ul>
                     <li><strong>Start:</strong> Ross' Castle</li>
@@ -49,7 +49,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-kerry/ross-castle-circular" target="_blank" id="hike-link">Hike Details</a>
                     </div>
             </div>
-            <div class="hike-center">
+            <div class="hike-rec">
                 <h3>Gap of Dunloe - Strickeen</h3>
                 <ul>
                     <li><strong>Start:</strong> Killarney Shuttle bus stop</li>
@@ -63,7 +63,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-kerry/gap-of-dunloe-strickeen" target="_blank" id="hike-link">Hike Details</a>
                 </div>
             </div>
-            <div class="hike-right">
+            <div class="hike-rec">
                 <h3>Dunloe - Brandon's Cottage</h3>
                 <ul>
                     <li><strong>Start:</strong> Killarney Shuttle bus stop</li>
