--- a/wicklow.html
+++ b/wicklow.html
@@ -34,7 +34,7 @@
 
             <h2 class="parks-heading">Recommended hikes</h2>
             <div class="recommended">
-                <div class="hike-left">
+                <div class="hike-rec">
                     <h3>Miners' Road Hike</h3>
                     <ul>
                         <li><strong>Start:</strong> Glendalough Visitor Center</li>
@@ -48,10 +48,10 @@
                         <a href="https://www.alltrails.com/trail/ireland/county-wicklow/miners-road-walk" target="_blank" id="hike-link">Hike Details</a>
                         </div>
                 </div>
-                <div class="hike-center">
+                <div class="hike-rec">
                     <h3>Spink Loup</h3>
                     <ul>
-                        <li><strong>Start:</strong> Glendalough Trails Start</li>
+                        <li><strong>Start:</strong> Glendalough Trails Starting point</li>
                         <li><strong>End:</strong> Glendalough Trails Start</li>
                         <li><strong>Difficulty level:</strong> Moderate</li>
                         <li><strong>Length:</strong> 6.0km (2:14 hours)</li>
@@ -62,10 +62,10 @@
                         <a href="https://www.alltrails.com/trail/ireland/county-wicklow/the-spink-loop" target="_blank" id="hike-link">Hike Details</a>
                     </div>
                 </div>
-                <div class="hike-right">
+                <div class="hike-rec">
                     <h3>1798 Memorial to Lugnaquilla</h3>
                     <ul>
-                        <li><strong>Start:</strong> Fraughan Rock Waterfall</li>
+                        <li><strong>Start:</strong> Fraughan Rock Waterfall parking</li>
                         <li><strong>End:</strong> Lugnaquilla Peak</li>
                         <li><strong>Difficulty level:</strong> Difficult</li>
                         <li><strong>Length:</strong> 12.6km (5:01 hours)</li>
