--- a/burren.html
+++ b/burren.html
@@ -35,7 +35,7 @@
 
         <h2 class="parks-heading">Recommended hikes</h2>
         <div class="recommended">
-            <div class="hike-left">
+            <div class="hike-rec">
                 <h3>Lough Avalla Farm Loop</h3>
                 <ul>
                     <li><strong>Start:</strong> Green Road Scenic Spot</li>
@@ -49,7 +49,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-clare/lough-avalla-farm-loop--2" target="_blank" id="hike-link">Hike Details</a>
                     </div>
             </div>
-            <div class="hike-center">
+            <div class="hike-rec">
                 <h3>Mullaghmore and Burren Park</h3>
                 <ul>
                     <li><strong>Start:</strong> Cooloorta</li>
@@ -63,7 +63,7 @@
                     <a href="https://www.alltrails.com/trail/ireland/county-clare/mullaghmore-and-burren-park-circular" target="_blank" id="hike-link">Hike Details</a>
                 </div>
             </div>
-            <div class="hike-right">
+            <div class="hike-rec">
                 <h3>Fanore and Blackhead loop</h3>
                 <ul>
                     <li><strong>Start:</strong> Fanore Beach</li>
